# NeoLDG

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
packaging/: NeoLDG.desktop
src/: DiagnosticLogger.cpp  DiagnosticLogger.hpp  LdgProtocol.cpp  LdgProtocol.hpp  LdgTunerController.cpp  LdgTunerController.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
